tests/baselines/reference/parserExportAssignment5.errors.txt
==== tests/cases/compiler/parserExportAssignment5.ts (2 errors) ====
    module M {
        export = A;
        ~~~~~~~~~~~
!!! parserExportAssignment5.ts(2,5): error TS1063: Export assignment cannot be used in internal modules.
        ~~~~~~~~~~~
!!! parserExportAssignment5.ts(2,5): error TS2095: Cannot find name 'A'.
    }